<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:fillViewport="true"
        android:background="#eeeeee">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#eeeeee">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="0dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/statistics_explanation"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                >

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TableRow>
                        <TextView
                            android:text="@string/scheduledWarnings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            />
                        <TextView
                            android:id="@+id/numScheduledWarnings"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/batteryFull"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            />
                        <TextView
                            android:id="@+id/numBatteryFullWarnings"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/temperatureWarnings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            />
                        <TextView
                            android:id="@+id/numTemperatureWarnings"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            />
                        <TextView
                            android:id="@+id/total"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />
                    </TableRow>
                </TableLayout>

            </android.support.v7.widget.CardView>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/alarm_screen_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#303f9f"
                fancy:fb_focusColor="#9a120f"
                fancy:fb_radius="4dp"
                fancy:fb_text="@string/close"
                android:onClick="close"
                android:layout_marginTop="8dp"
                fancy:fb_textColor="#FFFFFF"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"/>

            <!--com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/TestAdOnWarningPage">
            </com.google.android.gms.ads.AdView-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>