<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#eeeeee">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="0dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/main_explanation"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="8">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#303f9f"
                        fancy:fb_focusColor="#9a120f"
                        fancy:fb_radius="4dp"
                        fancy:fb_text="@string/help"
                        android:onClick="help"
                        android:layout_weight="2"
                        fancy:fb_textColor="#FFFFFF" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="8">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#303f9f"
                        fancy:fb_focusColor="#9a120f"
                        fancy:fb_radius="4dp"
                        fancy:fb_text="@string/settings_button"
                        android:onClick="settings"
                        android:layout_weight="2"
                        fancy:fb_textColor="#FFFFFF" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="4dp"

                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="8">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#303f9f"
                        fancy:fb_focusColor="#9a120f"
                        fancy:fb_radius="4dp"
                        fancy:fb_text="@string/statistics_button"
                        android:onClick="statistics"
                        android:layout_weight="2"
                        fancy:fb_textColor="#FFFFFF" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="8">

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#303f9f"
                        fancy:fb_focusColor="#9a120f"
                        fancy:fb_radius="4dp"
                        fancy:fb_text="@string/recommend_button"
                        android:onClick="recommend"
                        android:layout_weight="2"
                        fancy:fb_textColor="#FFFFFF" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="0dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dip">
                    <TableRow>
                        <TextView
                            android:text="@string/statusHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:textStyle="bold"
                            android:layout_marginRight="8dp"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/warningsActiveStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="8dp"
                            />
                        <TextView
                            android:id="@+id/numWarnings"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="8dp"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/batteryTemperatureStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="8dp"
                            />
                        <TextView
                            android:id="@+id/temp"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="8dp"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/batteryTechnologyStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="8dp"
                            />
                        <TextView
                            android:id="@+id/technology"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="8dp"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/Voltage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="8dp"
                            />
                        <TextView
                            android:id="@+id/voltage"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="8dp"
                            />
                    </TableRow>

                </TableLayout>
                <mehdi.sakout.fancybuttons.FancyButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    fancy:fb_borderColor="#FFFFFF"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="#303f9f"
                    fancy:fb_focusColor="#9a120f"
                    fancy:fb_radius="4dp"
                    fancy:fb_text="@string/refresh_button"
                    android:onClick="refresh"
                    android:layout_weight="2"
                    fancy:fb_textColor="#FFFFFF" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>

            <!--com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true""
                android:layout_alignParentBottom="true"
                ads:adSize="LARGE_BANNER
                ads:adUnitId="@string/TestAdOnWarningPage">
            </com.google.android.gms.ads.AdView-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>